--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,5 @@ elseif(UNIX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -fsanitize=address -fsanitize=undefined")
 endif()
 
-add_executable(platformer platformer.cpp globals.h graphics.h level.h player.h enemy.h assets.h utilities.h enemy.cpp player.cpp)
+add_executable(platformer platformer.cpp globals.h graphics.h level.h player.h enemy.h assets.h utilities.h enemy.cpp player.cpp level.cpp)
 target_link_libraries(platformer PRIVATE raylib)
